--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -12,8 +12,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: $z-index-fixed;
+    z-index: 9999 !important;
     height: 70px;
+    transform: translateZ(0);
 
     .logo {
         font-size: 1.5rem;
